--- a/Body_dataset_pytorch.ipynb
+++ b/Body_dataset_pytorch.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset show"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -27,6 +34,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from PIL import Image\n",
+    "from tqdm.notebook import tqdm\n",
     "\n",
     "\n",
     "# Using CrossEntropy loss\n",
@@ -103,11 +111,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Data Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d9bb731db7564de88dd2e268cc78fc47",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1500 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean: tensor([0.2096, 0.2226, 0.2109])\n",
+      "std:  tensor([0.2953, 0.3468, 0.3482])\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = len(train_ds) * 512 * 512\n",
+    "psum = torch.FloatTensor([0,0,0])\n",
+    "psum_sq = torch.FloatTensor([0,0,0])\n",
+    "\n",
+    "for x, _ in tqdm(train_loader):\n",
+    "    psum += x.sum(axis = [0,2,3])\n",
+    "    psum_sq += (x**2).sum(axis = [0,2,3])\n",
+    "\n",
+    "\n",
+    "# mean and std\n",
+    "total_mean = psum / count\n",
+    "total_var  = (psum_sq / count) - (total_mean ** 2)\n",
+    "total_std  = torch.sqrt(total_var)\n",
+    "\n",
+    "# output\n",
+    "print('mean: '  + str(total_mean))\n",
+    "print('std:  '  + str(total_std))"
+   ]
   }
  ],
  "metadata": {
