--- a/GradCam_CM_ROC.ipynb
+++ b/GradCam_CM_ROC.ipynb
@@ -43,7 +43,7 @@
     "from utils.dataset import BodyDataset\n",
     "from utils.dcmUtil import tensorShow\n",
     "\n",
-    "test_ds = BodyDataset(pd.read_csv('../../classifier/train_data/35_350_test.csv'), standardization = '30')\n",
+    "test_ds = BodyDataset(pd.read_csv('35_350_test.csv'), standardization = '30')\n",
     "test_loader = DataLoader(test_ds, batch_size=32, shuffle=True)\n",
     "\n",
     "x, y = next(iter(test_loader))\n",
@@ -71,7 +71,7 @@
     "model.fc = torch.nn.Linear(in_features=in_feature, out_features=2, bias=True)\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "model.load_state_dict(torch.load('../../classifier/35_350_result/loss_0.32_resnet18_v6.pt'))\n",
+    "model.load_state_dict(torch.load('35_350_result/loss_0.32_resnet18_v6.pt'))\n",
     "\n",
     "model.to(device)\n",
     "model.eval()\n",
